# jupyter-notebook-parser

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: python-package.yml
jupyter_notebook_parser/: __init__.py  container.py  container.pyi  parser.py  parser.pyi  rewriter.py  rewriter.pyi
tests/: test_container.py  test_parser.py  test_rewriter.py
tests/resources/: invalid_notebook_1.ipynb  jupyter_notebook_1.ipynb  test_replace_after.ipynb  test_replace_before.ipynb
