[metadata]
name = jupyter_notebook_parser
version = 0.1.4
description = A Python library that parses Jupyter notebook cells
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cyyc1/jupyter-notebook-parser
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*

[bdist_wheel]
universal = True
